# learning_ocp

./: .gitignore
convex_mpc/: CMakeLists.txt
convex_mpc/include/: ConvexMPC.hpp
mpc_1dof/: CMakeLists.txt  mpc.cpp  mpc_oop.cpp
mpc_holonomic_unconstrained/: CMakeLists.txt  mpc_holo.cpp
